--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -129,3 +129,10 @@ endif()
 
 # lodepng
 add_subdirectory(lodepng)
+
+# (xperia64): Only use libyuv on Android b/c of build issues on Windows and mandatory JPEG
+if(ANDROID)
+    # libyuv
+    add_subdirectory(libyuv)
+    target_include_directories(yuv INTERFACE ./libyuv/include)
+endif()
