src/CmakeLists.txt: Android: Prefer target_include_directories over include_directories

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -119,8 +119,8 @@ if (ENABLE_QT)
 endif()
 
 if (ANDROID)
-    include_directories(android/app/src/main)
     add_subdirectory(android/app/src/main/jni)
+    target_include_directories(main PRIVATE android/app/src/main)
 else()
     add_subdirectory(dedicated_room)
 endif()
