Android: rename android JNI from main to citra-android

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -120,7 +120,7 @@ endif()
 
 if (ANDROID)
     add_subdirectory(android/app/src/main/jni)
-    target_include_directories(main PRIVATE android/app/src/main)
+    target_include_directories(citra-android PRIVATE android/app/src/main)
 else()
     add_subdirectory(dedicated_room)
 endif()
