Add configure_enhancements.ui to CMakeLists.txt
This was omitted, which seemed to be preventing this tab from being translated.

--- a/src/citra_qt/CMakeLists.txt
+++ b/src/citra_qt/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(citra-qt
     configuration/configure_debug.ui
     configuration/configure_enhancements.cpp
     configuration/configure_enhancements.h
+    configuration/configure_enhancements.ui
     configuration/configure_dialog.cpp
     configuration/configure_dialog.h
     configuration/configure_general.cpp
