--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -31,6 +31,10 @@ add_subdirectory(catch2)
 # Crypto++
 add_subdirectory(cryptopp)
 
+# fmt and Xbyak need to be added before dynarmic
+# libfmt
+add_subdirectory(fmt)
+
 # Xbyak
 if (ARCHITECTURE_x86_64)
     add_library(xbyak INTERFACE)
@@ -47,9 +51,6 @@ if (ARCHITECTURE_x86_64 OR ARCHITECTURE_ARM64)
     set(DYNARMIC_FRONTENDS "A32")
     add_subdirectory(dynarmic)
 endif()
-
-# libfmt
-add_subdirectory(fmt)
 
 # getopt
 if (MSVC)
