cmake: Add SDL2 alias when using system library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -370,6 +370,10 @@ endif()
 # SDL2
 if (ENABLE_SDL2 AND USE_SYSTEM_SDL2)
     find_package(SDL2 REQUIRED)
+    add_library(SDL2 INTERFACE)
+    target_link_libraries(SDL2 INTERFACE "${SDL2_LIBRARY}")
+    target_include_directories(SDL2 INTERFACE "${SDL2_INCLUDE_DIR}")
+    add_library(SDL2::SDL2 ALIAS SDL2)
 endif()
 
 add_subdirectory(src)
