CI: fix recent build issues (#6148)
Co-authored-by: Vitor K <vitor-kiguchi@hotmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,9 @@ jobs:
     strategy:
       matrix:
         image: ["linux-fresh", "linux-frozen", "linux-mingw"]
-    container: citraemu/build-environments:${{ matrix.image }}
+    container:
+      image: citraemu/build-environments:${{ matrix.image }}
+      options: -u 1001
     steps:
       - uses: actions/checkout@v3
         with:
