ccache: rename option as not to conflict with submodules (#6156)
* ccache: rename option as not to conflict with submodules

* MinGWCross: fix alignment

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,7 +70,7 @@ if (MSVC)
 
     # Since MSVC's debugging information is not very deterministic, so we have to disable it
     # when using ccache or other caching tools
-    if (NOT USE_CCACHE)
+    if (NOT CITRA_USE_CCACHE)
         add_compile_options(
             /Zi
             /Zo
