--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,20 @@ jobs:
         with:
           name: ${{ matrix.image }}
           path: artifacts/
+  source:
+    if: ${{ !github.head_ref }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Pack
+        run: ./.ci/source/build.sh
+      - name: Upload
+        uses: actions/upload-artifact@v3
+        with:
+          name: source
+          path: artifacts/
   macos:
     runs-on: macos-latest
     steps:
@@ -154,7 +168,7 @@ jobs:
           TRANSIFEX_API_TOKEN: ${{ secrets.TRANSIFEX_API_TOKEN }}
   release:
     runs-on: ubuntu-latest
-    needs: [build, android]
+    needs: [build, android, macos, source]
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
       - uses: actions/download-artifact@v3
