src/CMakeLists: Enforce multiple warnings on MSVC (#5692)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,7 +46,16 @@ if (MSVC)
 
             # Warnings
             /W3
+            /we4062 # enumerator 'identifier' in a switch of enum 'enumeration' is not handled
+            /we4101 # 'identifier': unreferenced local variable
+            /we4265 # 'class': class has virtual functions, but destructor is not virtual
             /we4267 # 'var': conversion from 'size_t' to 'type', possible loss of data
+            /we4388 # signed/unsigned mismatch
+            /we4547 # 'operator' : operator before comma has no effect; expected operator with side-effect
+            /we4549 # 'operator1': operator before comma has no effect; did you intend 'operator2'?
+            /we4555 # Expression has no effect; expected expression with side-effect
+            /we4834 # Discarding return value of function with 'nodiscard' attribute
+            /we5038 # data member 'member1' will be initialized after data member 'member2'
         )
     else()
         add_compile_options(
@@ -64,7 +73,16 @@ if (MSVC)
 
             # Warnings
             /W3
+            /we4062 # enumerator 'identifier' in a switch of enum 'enumeration' is not handled
+            /we4101 # 'identifier': unreferenced local variable
+            /we4265 # 'class': class has virtual functions, but destructor is not virtual
             /we4267 # 'var': conversion from 'size_t' to 'type', possible loss of data
+            /we4388 # signed/unsigned mismatch
+            /we4547 # 'operator' : operator before comma has no effect; expected operator with side-effect
+            /we4549 # 'operator1': operator before comma has no effect; did you intend 'operator2'?
+            /we4555 # Expression has no effect; expected expression with side-effect
+            /we4834 # Discarding return value of function with 'nodiscard' attribute
+            /we5038 # data member 'member1' will be initialized after data member 'member2'
         )
     endif()
 
