Address review comments

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -74,6 +74,7 @@ add_library(common STATIC
     file_util.h
     hash.h
     linear_disk_cache.h
+    literals.h
     logging/backend.cpp
     logging/backend.h
     logging/filter.cpp
